# djsqlproject

./: app.py  data.json  db.sqlite3  main.py  manage.py  pyproject.toml
db/: models.py  views.py
db/migrations/: 0001_initial.py
